Fixed images' positioning and adjusted white space on mobile version.

--- a/css/style.scss
+++ b/css/style.scss
@@ -33,14 +33,91 @@ body {
 }
 
 .container {
-  background-color: #fff;
+  // background-color: #fff;
   border-radius: 15px;
   width: 90%;
+  margin: calc(100vh - 90vh) auto 0;
+}
+
+.card {
+  background-color: #fff;
+  // margin: calc(100vh - 75vh) auto 0;
+  // padding: 2.5rem 0;
+  padding: 2.5rem 0;
+  border-radius: 15px;
+
+  // display: flex;
+  // flex-direction: column;
+  // justify-content: space-between;
+  // position: relative;
+  // display: grid;
+  // grid-template-columns: 1fr;
+  // grid-template-rows: 25% 75%;
+  // gap: 1rem;
+  // height: 600px;
+  // min-height: 400px;
+}
+
+img {
+  width: 100%;
+}
+
+.bg-imgs {
+  width: 273px;
+  // height: 120px;
+  height: 115px;
+  margin: 0 auto;
+}
+
+.bg-imgs-container {
+  position: relative;
+  // background-color: rgb(243, 236, 238);
+  width: 100%;
+  height: 100%;
+  top: -95%;
+  margin: 0 auto;
+}
+
+.bg-pattern {
+  position: absolute;
+  // top: 22%;
+  top: 15%;
+  left: 50%;
+  transform: translateX(-50%);
+  width: 315px;
+  height: 215px;
+  background: tomato;
+  background: url("../images/bg-pattern-mobile.svg") no-repeat center center /
+    80%;
+}
+
+.woman {
+  position: absolute;
+  // top: -36%;
+  top: -47%;
+  left: 50%;
+  transform: translateX(-50%);
+  width: 315px;
+  height: 215px;
+  background: tomato;
+  // margin: -60px auto 0;
+  background: url("../images/illustration-woman-online-desktop.svg") no-repeat
+    center center / 80%;
+}
+
+.box {
+  position: absolute;
+  // top: 15%;
+  top: 7%;
+  left: -6%;
+  width: 140px;
+  height: 140px;
+  background: url("../images/illustration-box-desktop.svg") no-repeat center
+    center / 80%;
 }
 
 .faq-container {
-  padding: 6rem 1.5rem 1rem;
-  margin: 4rem 0 2rem;
+  padding: 0 1.5rem;
 
   h1 {
     margin-bottom: 1.5rem;
@@ -51,10 +128,6 @@ body {
   details {
     padding-bottom: 1rem;
     border-bottom: 1px solid $light-grayish-blue;
-
-    &:last-child {
-      border-bottom: none;
-    }
 
     summary {
       position: relative;
@@ -89,50 +162,8 @@ body {
       font-size: 12.5px;
       line-height: 1.5;
       color: $dark-grayish-blue;
+      // padding-right: 0.5rem;
+      width: 95%;
     }
   }
-}
-
-.card {
-  position: relative;
-}
-img {
-  width: 100%;
-}
-.first {
-  position: absolute;
-  top: -30%;
-  left: 50%;
-  transform: translateX(-50%);
-  // width: 250px;
-  // height: 200px;
-  width: 315px;
-  height: 215px;
-  background: tomato;
-  // margin: -60px auto 0;
-  background: url("../images/bg-pattern-mobile.svg") no-repeat center center /
-    80%;
-}
-
-.second {
-  position: absolute;
-  top: -48%;
-  left: 50%;
-  transform: translateX(-50%);
-  width: 315px;
-  height: 215px;
-  background: tomato;
-  // margin: -60px auto 0;
-  background: url("../images/illustration-woman-online-desktop.svg") no-repeat
-    center center / 80%;
-}
-
-.box {
-  position: absolute;
-  top: -33%;
-  left: 5%;
-  width: 140px;
-  height: 140px;
-  background: url("../images/illustration-box-desktop.svg") no-repeat center
-    center / 80%;
 }
